# holbertonschool-system_linux

./: CMakeLists.txt  Makefile  main.h  permissions.c
0x08_CPython/: 1-python.c  100-python.c  2-python.c  3-python.c  4-python.c  5-python.c
getline/: _getline.c  _getline.h  laps.c  laps.h
graphs/: 0-graph_create.c  README.md  graphs.h
ls/: Makefile  hls.c  list_directory.c  main.h  my_itoa.c  my_strcat.c  my_strcmp.c  my_strlen.c  my_strncpy.c  permissions.c
multithreading/: 0-thread_entry.c  1-tprintf.c  10-blur_portion.c  11-blur_image.c  20-tprintf.c  21-prime_factors.c  22-prime_factors.c  list.c  list.h  multithreading.h
nm_objdump/: 0-nm_endianness.c  0-nm_main.c  0-nm_symbols.c  Makefile  elf_header.h  hnm-32.c  hnm-64.c  hnm-main.c  hnm-test2.c  hnm-test3.c  hnm.h  hobjdump-endianness.c  hobjdump-flags.c  hobjdump-main.c  hobjdump-section_content.c  hobjdump.c  hobjdump.h  main.h  nm-main.c  test2.c  test3.c
readelf/: 0-hreadelf  1-elf_sec_header-flags.c  1-elf_sec_header-handle.c  1-elf_sec_header-handle_32.c  1-elf_sec_header-handle_64.c  1-elf_sec_header-handle_elf.c  1-elf_sec_header-main.c  1-elf_sec_header-print.c  1-elf_sec_header-swap.c  1-elf_sec_header-type.c  1-elf_sec_header-validation.c  1-elf_sec_header.c  1-hreadelf  2-elf_prog_header-main.c  Makefile  elf_header-abi_version.c  elf_header-class.c  elf_header-data.c  elf_header-details.c  elf_header-endian.c  elf_header-machine.c  elf_header-magic.c  elf_header-main.c  elf_header-os_abi.c  elf_header-read.c  elf_header-type.c  elf_header-version.c  elf_header.c  elf_header.h  (+1 more)
(+17 files in other folders)
